tests.yml possible openapi location fix

--- a/.env
+++ b/.env
@@ -128,3 +128,4 @@ RABBITMQ_PASSWORD=changeme!
 # Publiccode
 ##################################################
 PUBLICCODE="https://raw.githubusercontent.com/ConductionNL/zrc_publiccode/main/publiccode.yaml"
+OASLOCATION="https://raw.githubusercontent.com/CommonGateway/PetStore/main/OAS.yaml"
